--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,11 @@ dist/
 build/
 
 # Data files (optional, if data is too large or sensitive)
-data/
+# Data files (optional, if data is too large or sensitive)
+data/*
+!data/*.dvc
+
+# Ignore CSV and TXT files globally
 *.csv
 *.txt
 
